- Changed Filters on HOST cat page - Fixed youtube link on YP recipe page

--- a/category-host-main.html
+++ b/category-host-main.html
@@ -249,34 +249,31 @@
         </div>
 
 <!-- FILTER CARD -->
-
+Casual Dinner
         <div class="card d-none d-md-block">
 
           <div class="row no-m">
             <div class="col-lg-12 col-sm-12 no-pr no-pl">
               <h4 class="text-center no-mb">What kind of party are you throwing?</h4>
-              <ul class="nav nav-tabs nav-tabs-transparent indicator-primary nav-tabs-full nav-tabs-7" role="tablist">
+              <ul class="nav nav-tabs nav-tabs-transparent indicator-primary nav-tabs-full nav-tabs-6 role="tablist">
                 <li class="nav-item">
                   <a class="nav-link withoutripple no-pl no-pr filter active" data-filter="all" href="#cat" aria-controls="cat" role="tab" data-toggle="tab">ALL</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link withoutripple no-pl no-pr filter" data-filter=".category-1" href="#cat1" aria-controls="cat1" role="tab" data-toggle="tab">BEEF</span>
+                  <a class="nav-link withoutripple no-pl no-pr filter" data-filter=".category-1" href="#cat1" aria-controls="cat1" role="tab" data-toggle="tab">CASUAL DINNER</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link withoutripple no-pl no-pr filter" data-filter=".category-2" href="#cat2" aria-controls="cat2" role="tab" data-toggle="tab">COOKOUT</span>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link withoutripple no-pl no-pr filter" data-filter=".category-2" href="#cat2" aria-controls="cat2" role="tab" data-toggle="tab">PORK</a>
+                  <a class="nav-link withoutripple no-pl no-pr filter" data-filter=".category-3" href="#cat3" aria-controls="cat3" role="tab" data-toggle="tab">PLATED DINNER</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link withoutripple no-pl no-pr filter" data-filter=".category-3" href="#cat3" aria-controls="cat3" role="tab" data-toggle="tab">POULTRY</a>
+                  <a class="nav-link withoutripple no-pl no-pr filter" data-filter=".category-4" href="#cat4" aria-controls="cat4" role="tab" data-toggle="tab">SOMETHING ECCENTRIC</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link withoutripple no-pl no-pr filter" data-filter=".category-4" href="#cat4" aria-controls="cat4" role="tab" data-toggle="tab">VEGETABLES</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link withoutripple no-pl no-pr filter" data-filter=".category-5" href="#cat5" aria-controls="cat5" role="tab" data-toggle="tab">FISH</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link withoutripple no-pl no-pr filter" data-filter=".category-6" href="#cat6" aria-controls="cat6" role="tab" data-toggle="tab">BREAD</a>
+                  <a class="nav-link withoutripple no-pl no-pr filter" data-filter=".category-5" href="#cat5" aria-controls="cat5" role="tab" data-toggle="tab">DATE NIGHT</a>
                 </li>
               </ul>
             </div>
