--- a/about.html
+++ b/about.html
@@ -476,22 +476,22 @@
         <div class="ms-slidebar-social ms-slidebar-block">
           <h4 class="ms-slidebar-block-title">Social Links</h4>
           <div class="ms-slidebar-social">
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-facebook">
-              <i class="zmdi zmdi-facebook"></i>
+            <a href="https://www.facebook.com/ectlecta/" class="btn-circle btn-circle-raised btn-facebook">
+              <i class="zmdi1 zmdi-facebook"></i>
               <span class="badge-pill badge-pill-pink">12</span>
               <div class="ripple-container"></div>
             </a>
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-twitter">
-              <i class="zmdi zmdi-twitter"></i>
+            <a href="https://www.pinterest.com/ectlecta/" class="btn-circle btn-circle-raised btn-pinterest">
+              <i class="zmdi1 zmdi-pinterest-box"></i>
               <span class="badge-pill badge-pill-pink">4</span>
               <div class="ripple-container"></div>
             </a>
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-google">
-              <i class="zmdi zmdi-google"></i>
+            <a href="https://www.youtube.com/channel/UC9nFjVraKTD-31_t9OCHEJQ?view_as=subscriber" class="btn-circle btn-circle-raised btn-youtube">
+              <i class="zmdi1 zmdi-youtube-play"></i>
               <div class="ripple-container"></div>
             </a>
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-instagram">
-              <i class="zmdi zmdi-instagram"></i>
+            <a href="https://www.instagram.com/ectlecta/" class="btn-circle btn-circle-raised btn-instagram">
+              <i class="zmdi1 zmdi-instagram"></i>
               <div class="ripple-container"></div>
             </a>
           </div>
