Removed fake social media notifications from each pages hamburger menu updated recipe-master page Update recipe-content-template page

--- a/category-page-master.html
+++ b/category-page-master.html
@@ -495,17 +495,15 @@
           <h4 class="ms-slidebar-block-title">Social Links</h4>
           <div class="ms-slidebar-social">
             <a href="https://www.facebook.com/ectlecta/" class="btn-circle btn-circle-raised btn-facebook">
-              <i class="zmdi zmdi-facebook"></i>
-              <span class="badge-pill badge-pill-pink">12</span>
+              <i class="zmdi1 zmdi-facebook"></i>
               <div class="ripple-container"></div>
             </a>
             <a href="https://www.pinterest.com/ectlecta/" class="btn-circle btn-circle-raised btn-pinterest">
-              <i class="zmdi zmdi-twitter"></i>
-              <span class="badge-pill badge-pill-pink">4</span>
+              <i class="zmdi1 zmdi-pinterest-box"></i>
               <div class="ripple-container"></div>
             </a>
             <a href="https://www.youtube.com/channel/UC9nFjVraKTD-31_t9OCHEJQ?view_as=subscriber" class="btn-circle btn-circle-raised btn-youtube">
-              <i class="zmdi zmdi-google"></i>
+              <i class="zmdi zmdi-youtube-play"></i>
               <div class="ripple-container"></div>
             </a>
             <a href="https://www.instagram.com/ectlecta/" class="btn-circle btn-circle-raised btn-instagram">
