configured COOK cat page filter

--- a/category-cook-main.html
+++ b/category-cook-main.html
@@ -389,7 +389,7 @@
               </div>
               <!-- item -->
  <!-- item -->
-              <div class="col-md-4 col-sm-6 mix category-1">
+              <div class="col-md-4 col-sm-6 mix category-2">
                 <div class="card width-auto">
                   <figure class="ms-thumbnail ms-thumbnail-left">
                     <img src="assets/img/pork-carrots.jpg" alt="" class="img-fluid">
@@ -409,7 +409,7 @@
               </div>
               <!-- item -->
  <!-- item -->
-              <div class="col-md-4 col-sm-6 mix category-1">
+              <div class="col-md-4 col-sm-6 mix category-4">
                 <div class="card width-auto">
                   <figure class="ms-thumbnail ms-thumbnail-left">
                     <img src="assets/img/veg-stock.jpg" alt="" class="img-fluid">
@@ -429,7 +429,7 @@
               </div>
               <!-- item -->
  <!-- item -->
-              <div class="col-md-4 col-sm-6 mix category-1">
+              <div class="col-md-4 col-sm-6 mix category-2 category-3">
                 <div class="card width-auto">
                   <figure class="ms-thumbnail ms-thumbnail-left">
                     <img src="assets/img/veg-stock.jpg" alt="" class="img-fluid">
@@ -449,7 +449,7 @@
               </div>
               <!-- item -->             
  <!-- item -->
-              <div class="col-md-4 col-sm-6 mix category-1">
+              <div class="col-md-4 col-sm-6 mix category-2">
                 <div class="card width-auto">
                   <figure class="ms-thumbnail ms-thumbnail-left">
                     <img src="assets/img/sausage-1.jpg" alt="" class="img-fluid">
@@ -469,7 +469,7 @@
               </div>
               <!-- item -->
  <!-- item -->
-              <div class="col-md-4 col-sm-6 mix category-1">
+              <div class="col-md-4 col-sm-6 mix category-5">
                 <div class="card width-auto">
                   <figure class="ms-thumbnail ms-thumbnail-left">
                     <img src="assets/img/seabass-tomato.jpg" alt="" class="img-fluid">
