Fixed Page Titles
Fixed Logo link to home

--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
  <nav class="navbar navbar-expand-md  navbar-static ms-navbar ms-navbar-primary navbar-mode">
         <div class="container container-full">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="home.html">
               <!-- <img src="assets/img/demo/logo-navbar.png" alt=""> -->
               <span class="ms-logo ms-logo-sm">e</span>
               <span class="ms-title">
