--- a/travel.html
+++ b/travel.html
@@ -18,7 +18,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
       <meta name="theme-color" content="#333">
-      <title>ectlecta - travel</title>
+      <title>Travel - ectlecta</title>
       <meta name="description" content="Material Style Theme">
       <link rel="shortcut icon" href="assets/img/favicon.png?v=3">
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -35,7 +35,7 @@
      <nav class="navbar navbar-expand-md  navbar-static ms-navbar ms-navbar-primary navbar-mode">
           <div class="container container-full">
             <div class="navbar-header">
-              <a class="navbar-brand" href="index.html">
+              <a class="navbar-brand" href="home.html">
                 <!-- <img src="assets/img/demo/logo-navbar.png" alt=""> -->
                 <span class="ms-logo ms-logo-sm">e</span>
                 <span class="ms-title">
