--- a/recipes/ps-test.html
+++ b/recipes/ps-test.html
@@ -912,7 +912,22 @@ s.setAttribute('data-timestamp', +new Date());
     </div>
 
 
+    <!--PHOTOSWIPE-->
+    <!-- Core CSS file -->
+    <link rel="stylesheet" href="../assets/plugins/photoswipe/photoswipe.css"> 
 
+    <!-- Skin CSS file (styling of UI - buttons, caption, etc.)
+         In the folder of skin CSS file there are also:
+         - .png and .svg icons sprite, 
+         - preloader.gif (for browsers that do not support CSS animations) -->
+    <link rel="stylesheet" href="../assets/plugins/photoswipe/default-skin/default-skin.css"> 
+
+    <!-- Core JS file -->
+    <script src="../assets/plugins/photoswipe/photoswipe.min.js"></script> 
+
+    <!-- UI JS file -->
+    <script src="../assets/plugins/photoswipe/photoswipe-ui-default.min.js"></script> 
+        <!-- END PHOTOSWIPE-->
     <script src="../assets/js/plugins.min.js"></script>
     <script src="../assets/js/app.min.js"></script>
     <script id="dsq-count-scr" src="//ectlecta.disqus.com/count.js" async></script>
