--- a/recipes/ps-test.html
+++ b/recipes/ps-test.html
@@ -587,7 +587,26 @@
            <div>
           <article class="card card-primary timeline-center-item left wow slideInLeftTiny">
             <div class="card-block">
-            <img src="img/yorkshire_pudding/yp-done.jpg" alt="" class="img-fluid">
+
+<div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+
+    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+        <a href="large-image.jpg" itemprop="contentUrl" data-size="600x400">
+            <img src="small-image.jpg" itemprop="thumbnail" alt="Image description" />
+        </a>
+        <figcaption itemprop="caption description">Image caption</figcaption>
+    </figure>
+
+    <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
+        <a href="large-image.jpg" itemprop="contentUrl" data-size="600x400">
+            <img src="small-image.jpg" itemprop="thumbnail" alt="Image description" />
+        </a>
+        <figcaption itemprop="caption description">Image caption</figcaption>
+    </figure>
+
+
+</div>
+
             </div>
           </article>
            </div>
@@ -733,36 +752,26 @@
         </div>
       </div>
 
+      <div id="disqus_thread"></div>
+      <script>
 
+      /**
+      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
+      var disqus_config = function () {
+      this.page.url = 'https://skidude89.github.io/ectlecta/recipes/hungarian-mushroom-soup.html';  // Replace PAGE_URL with your page's canonical URL variable
+      this.page.identifier = '/recipes/hungarian-mushroom-soup'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      };
 
-
-
-
-
-
-
-
-<div id="disqus_thread"></div>
-<script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-var disqus_config = function () {
-this.page.url = 'https://skidude89.github.io/ectlecta/recipes/hungarian-mushroom-soup.html';  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = '/recipes/hungarian-mushroom-soup'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://ectlecta.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+      (function() { // DON'T EDIT BELOW THIS LINE
+      var d = document, s = d.createElement('script');
+      s.src = 'https://ectlecta.disqus.com/embed.js';
+      s.setAttribute('data-timestamp', +new Date());
+      (d.head || d.body).appendChild(s);
+      })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
                             
 
 
@@ -912,7 +921,74 @@ s.setAttribute('data-timestamp', +new Date());
     </div>
 
 
-    <!--PHOTOSWIPE-->
+<!--PHOTOSWIPE-->
+    <!-- Root element of PhotoSwipe. Must have class pswp. -->
+    <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+
+        <!-- Background of PhotoSwipe. 
+             It's a separate element as animating opacity is faster than rgba(). -->
+        <div class="pswp__bg"></div>
+
+        <!-- Slides wrapper with overflow:hidden. -->
+        <div class="pswp__scroll-wrap">
+
+            <!-- Container that holds slides. 
+                PhotoSwipe keeps only 3 of them in the DOM to save memory.
+                Don't modify these 3 pswp__item elements, data is added later on. -->
+            <div class="pswp__container">
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+            </div>
+
+            <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+            <div class="pswp__ui pswp__ui--hidden">
+
+                <div class="pswp__top-bar">
+
+                    <!--  Controls are self-explanatory. Order can be changed. -->
+
+                    <div class="pswp__counter"></div>
+
+                    <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+
+                    <button class="pswp__button pswp__button--share" title="Share"></button>
+
+                    <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+
+                    <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+                    <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
+                    <!-- element will get class pswp__preloader--active when preloader is running -->
+                    <div class="pswp__preloader">
+                        <div class="pswp__preloader__icn">
+                          <div class="pswp__preloader__cut">
+                            <div class="pswp__preloader__donut"></div>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+                    <div class="pswp__share-tooltip"></div> 
+                </div>
+
+                <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+                </button>
+
+                <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+                </button>
+
+                <div class="pswp__caption">
+                    <div class="pswp__caption__center"></div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+<!--PHOTOSWIPE ASSETS-->
     <!-- Core CSS file -->
     <link rel="stylesheet" href="../assets/plugins/photoswipe/photoswipe.css"> 
 
@@ -927,7 +1003,7 @@ s.setAttribute('data-timestamp', +new Date());
 
     <!-- UI JS file -->
     <script src="../assets/plugins/photoswipe/photoswipe-ui-default.min.js"></script> 
-        <!-- END PHOTOSWIPE-->
+<!-- END PHOTOSWIPE-->
     <script src="../assets/js/plugins.min.js"></script>
     <script src="../assets/js/app.min.js"></script>
     <script id="dsq-count-scr" src="//ectlecta.disqus.com/count.js" async></script>
