--- a/recipes/ps-test.html
+++ b/recipes/ps-test.html
@@ -590,7 +590,7 @@
 
 <h2>First gallery:</h2>
 
-  <div class="my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
+  <div class="pswp" itemscope itemtype="http://schema.org/ImageGallery">
 
     <figure itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
       <a href="https://farm3.staticflickr.com/2567/5697107145_a4c2eaa0cd_o.jpg" itemprop="contentUrl" data-size="1024x1024">
